made the resizer bars a little smaller and fixed some scrollbar issues.

--- a/css/simple.css
+++ b/css/simple.css
@@ -1,7 +1,6 @@
 #code_wrapper {
 	float: left;
 	width: 100%;
-	height: 100%;
 }
 #code_wrapper form {
 	height: 100%;
@@ -13,7 +12,7 @@
 
 }
 #rendered {
-	height: 100%;
+	height: 95%;
 	width: 100%;
 	border: 0;
 }
